# Grips_Kraft

./: .travis.yml  README.md  grips.rosinstall  index.html  params.json
grips/: CMakeLists.txt  package.xml
grips_bimanual/: CMakeLists.txt  package.xml
grips_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
grips_control/config/: bimanual_joint_control.yaml  joint_effort_controllers.yaml  joint_position_control.yaml  joint_trajectory_control.yaml  jt_cartesian_controller.yaml
grips_control/launch/: bimanual_labview_teleop.launch  gazebo_hardware_interface.launch  gazebo_motion_control.launch  grips_default_controllers.launch  grips_effort_controllers.launch  grips_trajectory_control.launch  jt_cartesian_controller.launch  labview_motion_control.launch  motion_control.launch
grips_control/scripts/: bimanual_labview_teleop.py  endpoint_state.py  four_bar_linkage.py  gazebo_hardware_interface.py  go_home_position.sh  jt_cartesian_controller.py  labview_hardware_interface.py  labview_server.py  simple_gripper_control.py
grips_control/src/: build_metrics_index.cpp  motion_control.cpp
grips_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
grips_description/launch/: bimanual_rviz.launch  grips.rviz  grips_rviz.launch  grips_simple_gripper_rviz.launch  robotiq_demo.rviz  upload_grips.launch
grips_description/meshes/: base.dae  l_finger.dae  l_inner_pivot.dae  r_finger.dae  upper_arm.dae
grips_description/meshes/collision/: base.dae  camera.dae  manifold.dae  pitch.dae  upper_arm.dae  yaw.dae
grips_description/meshes/forearm/: forearm.dae  forearm_collision.dae
grips_description/meshes/ft_sensor/: ft_sensor.dae
grips_description/meshes/gripper/: r_inner_pivot.dae
grips_description/meshes/imu_sensor/: imu_sensor.dae
grips_description/meshes/linkage/: coupling.dae  elbow_pivot.dae
grips_description/meshes/manifold/: manifold.dae
grips_description/meshes/pitch/: pitch.dae
grips_description/meshes/visual/: adis1640x.dae  ft_sensor.dae  ft_wrist_plate.dae  gripper_base.dae  outer_pivot.dae  robotiq_coupling.dae  wrist_coupling.dae
grips_description/meshes/yaw/: yaw.dae
grips_description/openrave/: .gitignore  generate_dae_files.sh  grips.robot.xml  grips_simple_gripper.robot.xml
grips_description/robots/: bimanual.urdf  bimanual.xacro  grips.urdf  grips.xacro  grips_no_gripper.urdf.xacro  grips_robotiq.urdf  grips_robotiq.urdf.xacro  grips_robotiq.xacro  grips_simple_gripper.urdf  grips_simple_gripper.xacro  left_arm.xacro  right_arm.xacro
grips_description/urdf/: common.xacro  ft_sensor.xacro  ftsensor.xacro  grips.gazebo  grips.xacro  grips_macro.xacro  imu_sensor.xacro  jaw_gripper.xacro  materials.xacro  serial_arm.xacro  simple_gripper.gazebo  simple_gripper.xacro  simple_gripper_macro.xacro
grips_ft_sensor/: CMakeLists.txt  package.xml
grips_ft_sensor/config/: ft_calibrated_data.yaml  ft_calibration_poses.yaml
grips_ft_sensor/launch/: dynamic_compensation.launch  ft_calibration.launch  ft_sensor_calibration.launch  gravity_compensation.launch  robotiq_demo.launch
grips_ft_sensor/scripts/: dynamic_compensation.py  ft_sensor_noise_filter.py  rosbag_dynamic_compensation.sh
grips_ft_sensor/urdf/: robotiq_demo.sdf  robotiq_demo.urdf  robotiq_demo.xacro
grips_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
grips_gazebo/launch/: bimanual_setup.launch  bringup_robot.launch  cordless_drill.launch  dexterity_test.launch  grips.launch  grips.rviz  grips_empty_world.launch  grips_no_controllers.launch  grips_robotiq.launch  grips_telerobcar_setup.launch  robot_bringup.launch  robot_bringup.xml
grips_gazebo/launch/rviz/: bimanual.rviz  grips.rviz  grips_robotiq.rviz
grips_gazebo/worlds/: grips.world
grips_kinematics/: CHANGELOG.rst  CMakeLists.txt  grips_transform6d_ikfast_plugin.xml  grips_translationdirection5d_1_plugin.xml  grips_translationdirection5d_2_plugin.xml  iterative_coupling_plugin.xml  iterative_decoupling_plugin.xml  package.xml  setup.py
grips_kinematics/ikfast/: generate_ikfast_solvers.sh  generate_kinematicreachability.sh  rotation3d.cpp  translation3d.cpp  translationdirection5d_idx_0.cpp  translationdirection5d_idx_1.cpp  translationdirection5d_idx_2.cpp
grips_kinematics/include/grips_kinematics/: kinematic_interface.hpp
grips_kinematics/launch/: kinematic_services.launch
grips_kinematics/scripts/: generate_fk_metrics.py  generate_ik_metrics.py  methods_assessment.py
grips_kinematics/src/: grips_transform6d_ikfast_plugin.cpp  grips_transform6d_ikfast_solver.cpp  grips_translationdirection5d_1_plugin.cpp  grips_translationdirection5d_1_solver.cpp  grips_translationdirection5d_2_plugin.cpp  grips_translationdirection5d_2_solver.cpp  iterative_coupling_plugin.cpp  iterative_decoupling_plugin.cpp  kinematic_interface.cpp  kinematic_services.cpp
grips_manipulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
grips_manipulation/include/grips_manipulation/: collision_free_motion.hpp
grips_manipulation/launch/: bimanual_collision_free.launch  custom_rosconsole.conf
grips_manipulation/src/: bimanual_planning_scene.cpp  collision_free_motion.cpp  collision_free_node.cpp  setup_bimanual_scene.cpp
grips_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
grips_msgs/cfg/: KinematicsSolvers.cfg
grips_msgs/msg/: GripsState.msg
grips_msgs/srv/: GetPoseMetrics.srv  GetStateMetrics.srv
grips_teleop/: CMakeLists.txt  package.xml  setup.py
grips_teleop/config/: cartesian_controller.rviz  lemniscate_trajectory.yaml  phantom_omni.yaml
grips_teleop/launch/: dynamic_compensation_test.launch  lemniscate_trajectory.launch  omni_teleop.launch
grips_teleop/scripts/: cartesian_trajectory.py  dynamic_compensation.py  dynamic_compensation_record.sh  ft_sensor_filter.py  omni_cart_coupling.py
grips_teleop/src/grips_teleop/: filters.py  (+1 more)
grips_worlds/: CHANGELOG.rst  CMakeLists.txt  package.xml
grips_worlds/launch/: dexterity_test.launch
grips_worlds/src/: dexterity_test_plugin.cpp
grips_worlds/worlds/: bimanual_setup.world  cordless_drill.world  dexterity_test.world  telerobcar_setup.world
(+51 files in other folders)
