<?xml version="1.0"?>
<package>
  <name>grips_control</name>
  <description>The grips_control package</description>

  <version>0.1.0</version>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/grips</url>
  <url type="repository">https://github.com/fsuarez6/grips</url>
  <author>Francisco Suarez-Ruiz</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hdf5</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>grips_description</build_depend>
  <build_depend>grips_moveit_config</build_depend>
  <build_depend>grips_kinematics</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>telerob_msgs</build_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>grips_description</run_depend>
  <run_depend>grips_moveit_config</run_depend>
  <run_depend>grips_kinematics</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>telerob_msgs</run_depend>

  <export>
  </export>
</package>
