<?xml version="1.0"?>
<package>
  <name>grips_kinematics</name>
  <description>The grips_kinematics package</description>

  <version>0.2.0</version>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/grips</url>
  <url type="repository">https://github.com/fsuarez6/grips</url>
  <author>Francisco Suarez-Ruiz</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>grips_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>message_generation</build_depend>
  

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>grips_description</run_depend>
  <run_depend>grips_msgs</run_depend>
  <run_depend>grips_moveit_config</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <moveit_core plugin="${prefix}/grips_transform6d_ikfast_plugin.xml"/>
    <moveit_core plugin="${prefix}/grips_translationdirection5d_1_plugin.xml"/>
    <moveit_core plugin="${prefix}/grips_translationdirection5d_2_plugin.xml"/>
    <moveit_core plugin="${prefix}/iterative_coupling_plugin.xml"/>
  </export>
</package>
