<?xml version="1.0"?>
<package>
  <name>grips_manipulation</name>
  <description>The grips_manipulation package</description>
  
  <version>0.1.0</version>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/grips</url>
  <url type="repository">https://github.com/fsuarez6/grips</url>
  <author>Francisco Suarez-Ruiz</author>

  <build_depend>message_generation</build_depend> 
  <run_depend>message_runtime</run_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>grips_control</build_depend>
  <build_depend>grips_kinematics</build_depend>
  <build_depend>grips_msgs</build_depend>
  <run_depend>grips_control</run_depend>
  <run_depend>grips_kinematics</run_depend>
  <run_depend>grips_msgs</run_depend>

</package>
